compiler/testData/diagnostics/tests/inference/NoInferenceFromDeclaredBounds.fir.kt
fun <T: Any> fooT22() : T? {
  return null
}

fun foo1() {
    <!CANNOT_INFER_PARAMETER_TYPE, NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>fooT22<!>()
}

val n : Nothing = null.sure()

fun <T : Any> T?.sure() : T = this!!
